# evaluation_engine

./: CHANGELOG.md  README.md  RELEASE_NOTES_v3.0.0.md  config.yaml  core_lib_output_sample.csv  cursor_.md  log.md  main.py  pyproject.toml
.serena/: README.md
docs/: EVALUATION_SPEC.md
